# plugify-source2-launcher

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_ru.md  crashpad.jsonc  crashpad.jsonc.in  plugify.pconfig.in
.github/: release-please-manifest.json
.github/workflows/: cmake-multiple-platform.yml
cmake/: FetchCLI.cmake  FetchCrashPad.cmake  FetchReproc.cmake
src/: main.cpp
sym/: version_script.lds
